@@ -1,3 +1,3 @@
-EBUILD xonotic-data-9999.ebuild 3157 RMD160 fa2f059f87af2b82e0d80c457172bc5395862711 SHA1 2efbc89cac57135a3857ccc663f86f9a2a41e89f SHA256 f70034d1544462507cd9bdf8a9539f59e2591752cb47ded58e4c63175ddefdae
-MISC ChangeLog 368 RMD160 cb2bc0c07404351cd0a5ba7192c6980beed9ac4c SHA1 6dc140a035ee08b6616a3bd6312fd4e8791f5967 SHA256 982f274a7a8cb7bc852716d65622ed2c792f51dada8e42b97a392a0d64cf033a
-MISC metadata.xml 464 RMD160 86d7fbea6edcba6452d3581044ca1a1a77239da5 SHA1 4615957949527226200e033661405ed8459f498d SHA256 d9a07557c99e4b12bafbb7f547ee63cf6d9931e4a8a47e2a5a5bbefc89097af2
+EBUILD xonotic-data-9999.ebuild 4514 RMD160 1d4d04f2b0f4aa5fc1d2c08d41d62e15326de4d2 SHA1 1b8445709337af4d2b56d6d5fa051251b801bc4a SHA256 8a581278c74f10884d2076af6aabb432b719b49ec22bf60a51175297b067ffe5
+MISC ChangeLog 504 RMD160 0550b68417d0970bf54a8a4163db0c1d6335641d SHA1 ce5bacfd05d0660fa776c7825326133916c26782 SHA256 90a6a19f7fa1b8edd28deaacf84b34f2cbfdde620f9c2d6a21ead9b44e8ada72
+MISC metadata.xml 651 RMD160 d29eea499f1bd06a0bcb187378ed3a23dc8c1161 SHA1 a22f44f04271037d67a409fcdbc37693b38e3f0f SHA256 1019c1624b191a5ab1c1c39182837d0c86bea09635496137a10a9e800c39f277
