@@ -8,6 +8,8 @@
 	</maintainer>
 	<use>
 		<flag name="client">Install files for client. Disabling is experimental.</flag>
+		<flag name="convert">Use cached-converter.sh for converting tga to jpeg</flag>
+		<flag name="low">Use low preset of cached-converter.sh: compress wav to ogg, lower jpeg quality.</flag>
 		<flag name="maps">Download and install maps.</flag>
 		<flag name="zip">Compress resources dirs in zip archives.</flag>
 	</use>
