@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Mar 2011; Nikoli <nikoli@lavabit.com> xonotic-data-9999.ebuild,
+  metadata.xml:
+  use cached-converter.sh, do not run 7za as root
+
   02 Feb 2011; Nikoli <nikoli@lavabit.com> xonotic-data-9999.ebuild:
   move maps to xonotic-maps package
 
